--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-scripts": "^5.0.01",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
